; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_dr_helper.c_dr_helper_get_image.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_dr_helper.c_dr_helper_get_image.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_image = type { i32 }
%struct.dr_helper = type { i32 }
%struct.get_image_cmd = type { i32, i32, i32, i32, %struct.mp_image*, %struct.dr_helper* }

@sync_get_image = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.mp_image* @dr_helper_get_image(%struct.dr_helper* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.dr_helper*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.get_image_cmd, align 8
  store %struct.dr_helper* %0, %struct.dr_helper** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = getelementptr inbounds %struct.get_image_cmd, %struct.get_image_cmd* %11, i32 0, i32 0
  %13 = load i32, i32* %7, align 4
  store i32 %13, i32* %12, align 8
  %14 = getelementptr inbounds %struct.get_image_cmd, %struct.get_image_cmd* %11, i32 0, i32 1
  %15 = load i32, i32* %8, align 4
  store i32 %15, i32* %14, align 4
  %16 = getelementptr inbounds %struct.get_image_cmd, %struct.get_image_cmd* %11, i32 0, i32 2
  %17 = load i32, i32* %9, align 4
  store i32 %17, i32* %16, align 8
  %18 = getelementptr inbounds %struct.get_image_cmd, %struct.get_image_cmd* %11, i32 0, i32 3
  %19 = load i32, i32* %10, align 4
  store i32 %19, i32* %18, align 4
  %20 = getelementptr inbounds %struct.get_image_cmd, %struct.get_image_cmd* %11, i32 0, i32 4
  store %struct.mp_image* null, %struct.mp_image** %20, align 8
  %21 = getelementptr inbounds %struct.get_image_cmd, %struct.get_image_cmd* %11, i32 0, i32 5
  %22 = load %struct.dr_helper*, %struct.dr_helper** %6, align 8
  store %struct.dr_helper* %22, %struct.dr_helper** %21, align 8
  %23 = load %struct.dr_helper*, %struct.dr_helper** %6, align 8
  %24 = getelementptr inbounds %struct.dr_helper, %struct.dr_helper* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @sync_get_image, align 4
  %27 = call i32 @mp_dispatch_run(i32 %25, i32 %26, %struct.get_image_cmd* %11)
  %28 = getelementptr inbounds %struct.get_image_cmd, %struct.get_image_cmd* %11, i32 0, i32 4
  %29 = load %struct.mp_image*, %struct.mp_image** %28, align 8
  ret %struct.mp_image* %29
}

declare dso_local i32 @mp_dispatch_run(i32, i32, %struct.get_image_cmd*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
